# asterisk-unimrcp

./: .gitignore  .gitmodules  AUTHORS  CHANGES  INSTALL  Makefile.am  README  acinclude.m4  configure.ac
app-unimrcp/: Makefile.am  app_channel_methods.c  app_channel_methods.h  app_datastore.c  app_datastore.h  app_mrcprecog.c  app_mrcpsynth.c  app_mrcpverif.c  app_msg_process_dispatcher.c  app_msg_process_dispatcher.h  app_recogverif.c  app_synthandrecog.c  app_unimrcp.c  ast_unimrcp_framework.c  ast_unimrcp_framework.h  audio_queue.c  audio_queue.h  recog_datastore.c  recog_datastore.h  result_parser.c  speech_channel.c  speech_channel.h
conf/: mrcp.conf  mrcp_sample_apps.conf  res-speech-unimrcp.conf  say-digit.conf
doc/: API.md  CONCEPTS.md  MAIN.md
docker/: README.md
docker/asterisk-centos/: Dockerfile  build.sh
docker/asterisk-centos/SPECS/: asterisk.spec
docker/build-centos/: Dockerfile
docker/build-ubuntu/: Dockerfile
docker/exec-centos/: Dockerfile  start.sh
docker/exec-ubuntu/: Dockerfile
docker/tests/: .env  Dockerfile  README.md  docker-compose.yaml  sip-caller.py  test-load.sh  test-script.sh  test-stress.sh
docker/tests/config/: config
docker/tests/config2/: config  zrtp.db
docker/tests/res/etc/asterisk/: extensions.conf  extensions.lua  mrcp.conf  pjsip.conf  res-speech-unimrcp.conf  sip.conf
docker/tests/res/usr/local/unimrcp/conf/client-profiles/: cpqd.xml
include/: ast_compat_defs.h
install/: make_asterisk_unimrcp_install.sh
install/resources/: README.md
install/resources/etc/asterisk/: asterisk.conf  extensions.conf  mrcp.conf  pjsip.conf  sip.conf
install/resources/usr/local/unimrcp/conf/client-profiles/: cpqd.xml
install/scripts/: install_asterisk_unimrcp.sh
res-speech-unimrcp/: Makefile.am  res_speech_unimrcp.c
